--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title> OFFICIAL SITE</title>
 
     <link rel="stylesheet" type="text/css" href="GridUse_for_prac1.css"> 
 
@@ -11,10 +11,10 @@
     <nav class="zone">
         
         <ul class="main-nav">      
-            <li> <a href="#"> ABC </a> </li>
-            <li> <a href="#"> ABC </a> </li>
-            <li> <a href="#"> ABC </a> </li>
-            <li> <a href="#"> ABC </a> </li>            
+            <li> <a href="#"> HOME </a> </li>
+            <li> <a href="#"> BLOG </a> </li>
+            <li> <a href="#"> EXPERIENCE </a> </li>
+            <li> <a href="#"> CERTIFICATION </a> </li>            
         </ul>
     </nav>
 
@@ -24,7 +24,7 @@
 
     <div class="content">
     <div class="wrapper">
-        <div class="c1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis in repellat aut iusto deserunt possimus similique sapiente nostrum doloribus! Velit repellat atque aspernatur a quisquam nulla fugit, sint nam nobis iusto, eligendi veniam expedita veritatis vero harum error corporis voluptate esse tempore. Soluta delectus recusandae cupiditate quod temporibus doloribus dolores nisi sunt dignissimos reprehenderit error adipisci, nemo officiis molestiae ea.</div>
+        <div class="c1"> <img src="files_phto5.jpeg" class="jimmy">  </div>
         <div class="c2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae debitis et, sit porro, atque perspiciatis deleniti magnam earum cumque suscipit id reprehenderit dicta optio facere quas sapiente aspernatur officiis quia velit mollitia, ipsa a nobis? Reprehenderit a sit tempore molestias accusantium facere velit, quisquam, veniam odio libero ipsa earum. Suscipit, at commodi dolore quidem in temporibus impedit nihil numquam quaerat!</div>
             
     </div>
