addition of meta tag as viewport for better performance

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title> OFFICIAL SITE</title>
 
     <link rel="stylesheet" type="text/css" href="GridUse_for_prac1.css"> 
+    <meta name="viewport">
 
 </head>
 <body>
