Blog Site added successfully

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         <ul class="main-nav">      
             <li> <a href="#"> HOME </a> </li>
-            <li> <a href="#"> BLOG </a> </li>
+            <li> <a href="https://get-rid-of-bullshit.blogspot.com"> BLOG </a> </li>
             <li> <a href="#"> EXPERIENCE </a> </li>
             <li> <a href="#"> CERTIFICATION </a> </li>            
         </ul>
