new structure for Mobile

--- a/index.html
+++ b/index.html
@@ -12,7 +12,32 @@
 </head>
 <body>
 
-    <nav class="zone">
+
+
+    <header>
+        <h1 class="logo"> Jimmy Taravia </h1>
+        <input type="checkbox" id="nav-toggle" class="nav-toggle">
+        <nav>
+            <ul>
+                <li> <a href=""> HOME</a></li>
+                <li> <a href=""> BLOG</a></li>
+                <li> <a href=""> EXPERIENCE</a></li>
+                <li> <a href=""> CERTIFICATION</a></li>
+                
+            </ul>
+
+
+        </nav>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+
+        </label>
+
+    </header>
+
+
+
+    <!-- <nav class="zone">
         
         <ul class="main-nav">      
             <li> <a href="#"> HOME </a> </li>
@@ -20,7 +45,7 @@
             <li> <a href="#"> EXPERIENCE </a> </li>
             <li> <a href="#"> CERTIFICATION </a> </li>            
         </ul>
-    </nav>
+    </nav> -->
 
 
     <br>
