--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
 
         <div class="blue">
         <div class="certificate" id="certificate">
-            <h2 class="certificatetitle">My Certificates</h2>
+            <h2 class="certificatetitle">CERTIFICATES</h2>
             <section class="cards">
               <div class="card certi_card">
                 <div class="card_image" style="background:url('certi1.png'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
-                  <div class="card_title certi_title">Interactivity with JavaScript</div>
+                  <div class="card_title certi_title">MARKETING IN DIGITAL WORLD </div>
                  
                   <a href="https://www.coursera.org/account/accomplishments/verify/GFZAL78XLD9C?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course" target="_blank" class="link certi_link"><div class="ltext">see the certificate</div></a>
                 </div>
@@ -94,7 +94,7 @@
                 <div class="card_image" style="background:url('certi2.png'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
-                  <div class="card_title certi_title">Introduction to CSS3</div>
+                  <div class="card_title certi_title">INTRODUCTION TO HTML5</div>
                   <a href="https://www.coursera.org/account/accomplishments/verify/EJM2269U3QSA?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course" target="_blank" class="link certi_link"><div class="ltext">see the certificate</div></a>
                 </div>
               </div>
@@ -102,7 +102,7 @@
                 <div class="card_image" style="background:url('certi3.png'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
-                  <div class="card_title certi_title">Introduction to HTML5</div>
+                  <div class="card_title certi_title">STOCK MARKET AND FINANCE </div>
                   <a href="https://www.coursera.org/account/accomplishments/verify/CFM27XX3CRVB?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course" target="_blank"class="link certi_link"><div class="ltext">see the certificate</div></a>
                 </div>
               </div>
@@ -111,7 +111,7 @@
                 <div class="card_image" style="background:url('certi5.png'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
-                  <div class="card_title certi_title">Introduction to Cloud by IBM</div>
+                  <div class="card_title certi_title">JETKINGS CASE STUDY COMPETITION </div>
                   <a href="https://courses.edx.org/certificates/dc634aaf2d10435695944835afd0da9b" target="_blank" class="link certi_link"><div class="ltext">see the certificate</div></a>
                 </div>
               </div>
@@ -119,7 +119,7 @@
                 <div class="card_image" style="background:url('certi6.png'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
-                  <div class="card_title certi_title">The Joy of Computing Using Python by NPTEL</div>
+                  <div class="card_title certi_title">MYCAPTAIN INTERSHIP</div>
                   <a href="https://internalapp.nptel.ac.in/NOC/NOC21/SEM2/Ecertificates/106/noc21-cs75/Course/NPTEL21CS75S2305043003170317.jpg" target="_blank" class="link certi_link"><div class="ltext">see the certificate</div></a>
                 </div>
               </div>
@@ -127,7 +127,7 @@
                 <div class="card_image" style="background:url('certi4.png'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
-                  <div class="card_title certi_title">Learning how to learn</div>
+                  <div class="card_title certi_title">BLOCKCHAIN AND BITCOIN</div>
                   <a href="https://www.coursera.org/account/accomplishments/verify/T6659XG579SB?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course" target="_blank" class="link certi_link"><div class="ltext">see the certificate</div></a>
                 </div>
               </div>
