--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <link rel="stylesheet" type="text/css" href="GridUse_for_prac1.css"> 
     <meta name="viewport">
 
+    <meta name="google-site-verification" content="2oGzG8zo0oh0y2KLTR7XXNI9hstV2fmRs7RIGwBG2LE" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+
+
 </head>
 <body>
 
@@ -134,6 +146,18 @@
             </section>
           </div>
           </div>
+
+
+                        <!-- ---------------------footer starts here------------------------- -->
+      <footer class="footer_section" id="contact">
+        <div class="contact_info">
+          <p>
+            Let's have a chat at
+          </p>
+          <p><i class="fa-regular fa-envelope"></i> taraviajimmy01@gmail.com</p>
+        </div>
+        <div class="self"><p> Made by Jimmy Taravia <a href="https://github.com/Jimmy-Taravia2001/New_structure-forweb_CSS_GRID/tree/mobile_branch" target="_blank" style="text-decoration: none;"><i class="fa-brands fa-github"></i></a></p></div>
+      </footer><!-- ---------------------footer ends here------------------------- -->
 
 
 </body>
