--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <div class="card_image" style="background:url('Jimmysblog.PNG'); background-size: cover;
                     background-repeat: no-repeat; background-position:center;"></div>
                     <div class="card_content">
-                      <div class="card_title certi_title"> <h1>BLOGGER - A LIFETIME OF PROJECT</h1> Author of never ending Blogs as I am a passinate community builder excited to share ideas, percpective, nuances and so on.</div>
+                      <div class="card_title certi_title"> <h1>BLOGGER - A LIFETIME OF PROJECT</h1> Author of never ending Blogs as I am a passinate community builder excited to share ideas, percpective, nuances and so on. I have written about countless topics that are about marketing, culture, ideas, nuances, human behavior, Learning, Awareness, and education is purpose of these Blogs.</div>
                       <a href="https://get-rid-of-bullshit.blogspot.com" target="_blank" class="link certi_link"><div class="ltext">Read Here</div></a>
                     </div>
                   </div>
