--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> OFFICIAL SITE</title>
+    <title> Jimmy Taravia</title>
 
     <link rel="stylesheet" type="text/css" href="GridUse_for_prac1.css"> 
     <meta name="viewport">
