--- a/index.html
+++ b/index.html
@@ -155,6 +155,16 @@
                   <a href="https://www.coursera.org/account/accomplishments/verify/T6659XG579SB?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course" target="_blank" class="link certi_link"><div class="ltext">see the certificate</div></a>
                 </div>
               </div>
+              <div class="card certi_card">
+                <div class="card_image" style="background:url('photos/Ecell_iit.PNG'); background-size: cover;
+                background-repeat: no-repeat; background-position:center;"></div>
+                <div class="card_content">
+                  <div class="card_title certi_title">E-Cell IIT Roorke Seminar</div>
+                  <a href="https://drive.google.com/file/d/1Jcf6Aw3mTmTK87tF0lmhE7Pb8cECXik5/view?usp=sharing" target="_blank" class="link certi_link"><div class="ltext">see the certificate</div></a>
+                </div>
+              </div>
+
+
             </section>
           </div>
           </div>
@@ -199,6 +209,8 @@
                       <a href="" target="_blank" class="link certi_link"><div class="ltext">Click Here</div></a>
                     </div>
                   </div>
+
+                 
                   
                 </section>
               </div>
