--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </h2>
             <section class="cards">
               <div class="card certi_card">
-                <div class="card_image" style="background:url('photos/certi1.PNG'); background-size: cover;
+                <div class="card_image" style="background:url('photos/certi1.png'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">MARKETING IN DIGITAL WORLD </div>
@@ -115,7 +115,7 @@
                 </div>
               </div>
               <div class="card certi_card">
-                <div class="card_image" style="background:url('photos/certi2.PNG'); background-size: cover;
+                <div class="card_image" style="background:url('photos/certi2.png'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">INTRODUCTION TO HTML5</div>
@@ -123,7 +123,7 @@
                 </div>
               </div>
               <div class="card certi_card">
-                <div class="card_image" style="background:url('photos/certi3.PNG'); background-size: cover;
+                <div class="card_image" style="background:url('photos/certi3.png'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">STOCK MARKET AND FINANCE </div>
@@ -132,7 +132,7 @@
               </div>
               
               <div class="card certi_card">
-                <div class="card_image" style="background:url('photos/certi5.PNG'); background-size: cover;
+                <div class="card_image" style="background:url('photos/certi5.png'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">JETKINGS CASE STUDY COMPETITION </div>
@@ -140,7 +140,7 @@
                 </div>
               </div>
               <div class="card certi_card">
-                <div class="card_image" style="background:url('photos/certi6.PNG'); background-size: cover;
+                <div class="card_image" style="background:url('photos/certi6.png'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">MYCAPTAIN INTERSHIP</div>
@@ -148,7 +148,7 @@
                 </div>
               </div>
               <div class="card certi_card">
-                <div class="card_image" style="background:url('photos/certi4.PNG'); background-size: cover;
+                <div class="card_image" style="background:url('photos/certi4.png'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">BLOCKCHAIN AND BITCOIN</div>
