--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     </div>
                   </div>
                   <div class="card certi_card">
-                    <div class="card_image" style="background:url('photos/Jimmysblog.png'); background-size: cover;
+                    <div class="card_image" style="background:url('photos/Jimmysblog.PNG'); background-size: cover;
                     background-repeat: no-repeat; background-position:center;"></div>
                     <div class="card_content">
                       <div class="card_title certi_title"> <h1>BLOGGER - A LIFETIME OF PROJECT</h1> Author of never ending Blogs as I am a passinate community builder excited to share ideas, percpective, nuances and so on. I have written about countless topics that are about marketing, culture, ideas, nuances, human behavior, Learning, Awareness, and education is purpose of these Blogs.</div>
@@ -193,7 +193,7 @@
                     </div>
                   </div>
                   <div class="card certi_card">
-                    <div class="card_image" style="background:url('photos/Devblogs.png'); background-size: cover;
+                    <div class="card_image" style="background:url('photos/Devblogs.PNG'); background-size: cover;
                     background-repeat: no-repeat; background-position:center;"></div>
                     <div class="card_content">
                       <div class="card_title certi_title"> <h1>TECH COMMUNITY BUILDER</h1> I am an author of various techincal blogs on Dev community platform discussing about diverse tech and softwatre related stuff, subsequently helping the comuunity to evolve, learn, and share their perspectives on software development, learning, teaching, and leading.</div>
@@ -202,7 +202,7 @@
                   </div>
                   
                   <div class="card certi_card">
-                    <div class="card_image" style="background:url('photos/Portfolio.png'); background-size: cover;
+                    <div class="card_image" style="background:url('photos/Portfolio.PNG'); background-size: cover;
                     background-repeat: no-repeat; background-position:center;"></div>
                     <div class="card_content">
                       <div class="card_title certi_title"> <h1>PORTFOLIO WEBSITE</h1> I builded this whole website that you are experiencing right now from the scratch. It took months and months of hard work solving problems, taking suggestions, managing time with my academics, meanwhile also helping others to build their portfolio websites and giving suggestions.</div>
