--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:wght@300;400&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 
@@ -27,23 +26,21 @@
 
 
     <header>
+      
         <h1 class="logo"> Jimmy Taravia </h1>
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <nav>
-            <ul>
-                <li> <a href=""> HOME</a></li>
-                <li> <a href="https://get-rid-of-bullshit.blogspot.com"> BLOG</a></li>
-                <li> <a href="#certificate"> CERTIFICATION</a></li>
-                <li> <a href="#PROject"> PROJECTS</a></li>
-                <li> <a href="#sKills"> SKILLS</a></li>
-                
-            </ul>
-
-
+          <ul>
+            <li> <a href=""> HOME</a></li>
+            <li> <a href="https://get-rid-of-bullshit.blogspot.com"> BLOG</a></li>
+            <li> <a href="#certificate"> CERTIFICATION</a></li>
+            <li> <a href="#PROject"> PROJECTS</a></li>
+            <li> <a href="#sKills"> SKILLS</a></li>   
+          </ul>
         </nav>
         <label for="nav-toggle" class="nav-toggle-label">
-            <span></span>
 
+          <span></span>
         </label>
 
     </header>
