--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <meta name="viewport">
 
     <meta name="google-site-verification" content="2oGzG8zo0oh0y2KLTR7XXNI9hstV2fmRs7RIGwBG2LE" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet'>
+
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:wght@300;400&display=swap"
       rel="stylesheet">
