--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     <link href='https://fonts.googleapis.com/css?family=Aladin' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Allerta Stencil' rel='stylesheet'>
 
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest" type="image/png">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5" type="image/png">
+    <meta name="msapplication-TileColor" content="#da532c" >
+    <meta name="theme-color" content="#ffffff"> 
+
 
 
 
