--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <div class="c2"> <h2>Hey, Jimmy here</h2> I am an Information and Communication Technology Undergrad, a budding and learning Web developer, and a Writing Enthusiasist who notices things and point it out in my Blogs, aspire to become a admirable software developer. I know C++ and carry out problem solving on GFG through Data structures and Algorithm. Also with my personal Blogs, i am a community builder via author of blogs on Dev.to platform helping other folks to move forward, learn, and lead by sharing perspectives on open source contributions and projects.  
           <ul class="social_list">
-            <li class="social_item"><a aria-label="twitter" href="https://twitter.com/Jimmy10563139" class="social_link" target="_blank"><i class="fa-brands fa-twitter-square"></i></a></li>
+            <li class="social_item"><a aria-label="twitter" href="https://twitter.com/Jimee_himself" class="social_link" target="_blank"><i class="fa-brands fa-twitter-square"></i></a></li>
             <li class="social_item"><a aria-label="linkedin" href="https://www.linkedin.com/in/jimmy-taravia-298358200/" class="social_link" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
             <li class="social_item"><a aria-lebel="GitHub" href="https://github.com/Jimmy-Taravia2001" class="social_link" target="_blank"><i class="fa-brands fa-github"></i></a></li>
             <li class="social_item"><a aria-lebel="dev.to" href="https://dev.to/jimmytaravia" class="social_link" target="_blank"><i class="fa-brands fa-dev"></i></a></li>
