--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </h2>
             <section class="cards">
               <div class="card certi_card">
-                <div class="card_image" style="background:url('photos/certi1.png'); background-size: cover;
+                <div class="card_image" style="background:url('photos/certificate.PNG'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">MARKETING IN DIGITAL WORLD </div>
@@ -127,7 +127,7 @@
                 </div>
               </div>
               <div class="card certi_card">
-                <div class="card_image" style="background:url('photos/certi2.png'); background-size: cover;
+                <div class="card_image" style="background:url('photos/certificate.PNG'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">INTRODUCTION TO HTML5</div>
@@ -135,7 +135,7 @@
                 </div>
               </div>
               <div class="card certi_card">
-                <div class="card_image" style="background:url('photos/certi3.png'); background-size: cover;
+                <div class="card_image" style="background:url('photos/certificate.PNG'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">STOCK MARKET AND FINANCE </div>
@@ -144,7 +144,7 @@
               </div>
               
               <div class="card certi_card">
-                <div class="card_image" style="background:url('photos/certi5.png'); background-size: cover;
+                <div class="card_image" style="background:url('photos/certificate.PNG'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">JETKINGS CASE STUDY COMPETITION </div>
@@ -152,7 +152,7 @@
                 </div>
               </div>
               <div class="card certi_card">
-                <div class="card_image" style="background:url('photos/certi6.png'); background-size: cover;
+                <div class="card_image" style="background:url('photos/certificate.PNG'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">MYCAPTAIN INTERSHIP</div>
@@ -160,7 +160,7 @@
                 </div>
               </div>
               <div class="card certi_card">
-                <div class="card_image" style="background:url('photos/certi4.png'); background-size: cover;
+                <div class="card_image" style="background:url('photos/certificate.PNG'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">BLOCKCHAIN AND BITCOIN</div>
@@ -168,7 +168,7 @@
                 </div>
               </div>
               <div class="card certi_card">
-                <div class="card_image" style="background:url('photos/Ecell_iit.PNG'); background-size: cover;
+                <div class="card_image" style="background:url('photos/certificate.PNG'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">E-Cell IIT Roorke Seminar</div>
@@ -188,7 +188,7 @@
                 <h2 class="certificatetitle" id="PROject">PROJECTS</h2>
                 <section class="cards">
                   <div class="card certi_card">
-                    <div class="card_image" style="background:url('photos/researchpaper1.png'); background-size: cover;
+                    <div class="card_image" style="background:url('photos/Capture.PNG'); background-size: cover;
                     background-repeat: no-repeat; background-position:center;"></div>
                     <div class="card_content">
                       <div class="card_title certi_title"> <h1>RESEARCH PAPER</h1> The research paper Advent of Big Data Technology in environment and water management sector has been accepted in Environmental Science and Pollution, Springer. The Journal has an Impact Factor of 3.303. The paper was accepted on April 13, 2021 and got published on April 27, 2021. It took around a year of continuous work to achieve. </div>
@@ -197,7 +197,7 @@
                     </div>
                   </div>
                   <div class="card certi_card">
-                    <div class="card_image" style="background:url('photos/Jimmysblog.PNG'); background-size: cover;
+                    <div class="card_image" style="background:url('photos/Write.PNG'); background-size: cover;
                     background-repeat: no-repeat; background-position:center;"></div>
                     <div class="card_content">
                       <div class="card_title certi_title"> <h1>BLOGGER - A LIFETIME OF PROJECT</h1> Author of never ending Blogs as I am a passinate community builder excited to share ideas, percpective, nuances and so on. I have written about countless topics that are about marketing, culture, ideas, nuances, human behavior, Learning, Awareness, and education is purpose of these Blogs.</div>
