--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     </div>
                   </div>
                   <div class="card certi_card">
-                    <div class="card_image" style="background:url('photos/Devblogs.PNG'); background-size: cover;
+                    <div class="card_image" style="background:url('photos/Dev3.PNG'); background-size: cover;
                     background-repeat: no-repeat; background-position:center;"></div>
                     <div class="card_content">
                       <div class="card_title certi_title"> <h1>TECH COMMUNITY BUILDER</h1> I am an author of various techincal blogs on Dev community platform discussing about diverse tech and softwatre related stuff, subsequently helping the comuunity to evolve, learn, and share their perspectives on software development, learning, teaching, and leading.</div>
