--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="card_content">
                   <div class="card_title certi_title">MARKETING IN DIGITAL WORLD </div>
                  
-                  <a href="https://www.coursera.org/account/accomplishments/certificate/979DUQUUEV22" target="_blank" class="link certi_link"><div class="ltext">see the certificate</div></a>
+                  <a href="https://www.coursera.org/account/accomplishments/certificate/979DUQUUEV22" target="_blank" class="link certi_link"><div class="ltext">-University of michigan-</div></a>
                 </div>
               </div>
               <div class="card certi_card">
@@ -131,7 +131,7 @@
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">INTRODUCTION TO HTML5</div>
-                  <a href="https://www.coursera.org/account/accomplishments/certificate/YG88TD6W2W39" target="_blank" class="link certi_link"><div class="ltext">see the certificate</div></a>
+                  <a href="https://www.coursera.org/account/accomplishments/certificate/YG88TD6W2W39" target="_blank" class="link certi_link"><div class="ltext">-University of michigan-</div></a>
                 </div>
               </div>
               <div class="card certi_card">
@@ -139,7 +139,7 @@
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">STOCK MARKET AND FINANCE </div>
-                  <a href="https://drive.google.com/file/d/1HOTDDjiSXi6lBTP5xOHBAA-RV3D87-AX/view?usp=sharing" target="_blank"class="link certi_link"><div class="ltext">see the certificate</div></a>
+                  <a href="https://drive.google.com/file/d/1HOTDDjiSXi6lBTP5xOHBAA-RV3D87-AX/view?usp=sharing" target="_blank"class="link certi_link"><div class="ltext">-MyCaptain-</div></a>
                 </div>
               </div>
               
@@ -148,7 +148,7 @@
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">JETKINGS CASE STUDY COMPETITION </div>
-                  <a href="https://drive.google.com/file/d/1z0Rl_UYHM1ichY-IGSWhvuGf1qZaFV4k/view?usp=sharing" target="_blank" class="link certi_link"><div class="ltext">see the certificate</div></a>
+                  <a href="https://drive.google.com/file/d/1z0Rl_UYHM1ichY-IGSWhvuGf1qZaFV4k/view?usp=sharing" target="_blank" class="link certi_link"><div class="ltext">-Bulls And Bears-</div></a>
                 </div>
               </div>
               <div class="card certi_card">
@@ -156,7 +156,7 @@
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">MYCAPTAIN INTERSHIP</div>
-                  <a href="https://drive.google.com/file/d/1HTvnQwtkk_LSVUuvi0z2XsdSANKH8Xlm/view?usp=sharing" target="_blank" class="link certi_link"><div class="ltext">see the certificate</div></a>
+                  <a href="https://drive.google.com/file/d/1HTvnQwtkk_LSVUuvi0z2XsdSANKH8Xlm/view?usp=sharing" target="_blank" class="link certi_link"><div class="ltext">-MyCaptain-</div></a>
                 </div>
               </div>
               <div class="card certi_card">
@@ -164,7 +164,7 @@
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">BLOCKCHAIN AND BITCOIN</div>
-                  <a href="https://www.coursera.org/account/accomplishments/verify/T6659XG579SB?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course" target="_blank" class="link certi_link"><div class="ltext">see the certificate</div></a>
+                  <a href="https://www.coursera.org/account/accomplishments/verify/T6659XG579SB?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course" target="_blank" class="link certi_link"><div class="ltext">-Udemy-</div></a>
                 </div>
               </div>
               <div class="card certi_card">
@@ -172,7 +172,7 @@
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">E-Cell IIT Roorke Seminar</div>
-                  <a href="https://drive.google.com/file/d/1Jcf6Aw3mTmTK87tF0lmhE7Pb8cECXik5/view?usp=sharing" target="_blank" class="link certi_link"><div class="ltext">see the certificate</div></a>
+                  <a href="https://drive.google.com/file/d/1Jcf6Aw3mTmTK87tF0lmhE7Pb8cECXik5/view?usp=sharing" target="_blank" class="link certi_link"><div class="ltext">-IIT Roorke-</div></a>
                 </div>
               </div>
 
