--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <div class="card_content">
                       <div class="card_title certi_title"> <h1>RESEARCH PAPER</h1> The research paper Advent of Big Data Technology in environment and water management sector has been accepted in Environmental Science and Pollution, Springer. The Journal has an Impact Factor of 3.303. The paper was accepted on April 13, 2021 and got published on April 27, 2021. It took around a year of continuous work to achieve. </div>
                      
-                      <a href="https://link.springer.com/article/10.1007/s11356-021-14017-y" target="_blank" class="link certi_link"><div class="ltext">View Paper</div></a>
+                      <a href="https://link.springer.com/article/10.1007/s11356-021-14017-y" target="_blank" class="link certi_link"><div class="ltext">-Springer-</div></a>
                     </div>
                   </div>
                   <div class="card certi_card">
@@ -201,7 +201,7 @@
                     background-repeat: no-repeat; background-position:center;"></div>
                     <div class="card_content">
                       <div class="card_title certi_title"> <h1>BLOGGER - A LIFETIME OF PROJECT</h1> Author of never ending Blogs as I am a passinate community builder excited to share ideas, percpective, nuances and so on. I have written about countless topics that are about marketing, culture, ideas, nuances, human behavior, Learning, Awareness, and education is purpose of these Blogs.</div>
-                      <a href="https://get-rid-of-bullshit.blogspot.com" target="_blank" class="link certi_link"><div class="ltext">Read Here</div></a>
+                      <a href="https://get-rid-of-bullshit.blogspot.com" target="_blank" class="link certi_link"><div class="ltext">-Read here-</div></a>
                     </div>
                   </div>
                   <div class="card certi_card">
@@ -209,7 +209,7 @@
                     background-repeat: no-repeat; background-position:center;"></div>
                     <div class="card_content">
                       <div class="card_title certi_title"> <h1>TECH COMMUNITY BUILDER</h1> I am an author of various techincal blogs on Dev community platform discussing about diverse tech and softwatre related stuff, subsequently helping the comuunity to evolve, learn, and share their perspectives on software development, learning, teaching, and leading.</div>
-                      <a href="https://dev.to/jimmytaravia" target="_blank"class="link certi_link"><div class="ltext">Visit here</div></a>
+                      <a href="https://dev.to/jimmytaravia" target="_blank"class="link certi_link"><div class="ltext">-Visit-</div></a>
                     </div>
                   </div>
                   
