--- a/index.html
+++ b/index.html
@@ -98,14 +98,22 @@
 
         <div class="zone blue grid-wrapper" id="sKills"> 
 
-            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg"> </div>
-            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg"> </div>
-            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg"> </div>
-            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg"></div>
-            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-plain-wordmark.svg"> </div>
-            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg"> </div>
-            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"> </div>
-            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original-wordmark.svg"> </div>
+            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" data-aos="fade-up"
+              data-aos-duration="800"> </div>
+            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg" data-aos="fade-up"
+              data-aos-duration="800"> </div>
+            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" data-aos="fade-up"
+              data-aos-duration="800"> </div>
+            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" data-aos="fade-up"
+              data-aos-duration="800"></div>
+            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-plain-wordmark.svg" data-aos="fade-up"
+              data-aos-duration="800"> </div>
+            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" data-aos="fade-up"
+              data-aos-duration="800"> </div>
+            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" data-aos="fade-up"
+              data-aos-duration="800"> </div>
+            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original-wordmark.svg" data-aos="fade-up"
+              data-aos-duration="800"> </div>
     
         </div>
 
