--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="GridUse_for_prac1.css"> 
     <meta name="viewport">
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <meta name="google-site-verification" content="2oGzG8zo0oh0y2KLTR7XXNI9hstV2fmRs7RIGwBG2LE" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -273,6 +275,12 @@
           setTextAnimation(0.1,3.2,4,'ease-in','#0b0909',true);
                     </script>
           <!--SVG script ends here-->
+          
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>
+
 
 
 </body>
