--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                   </div>
                   
                   <div class="card certi_card">
-                    <div class="card_image" style="background:url('photos/Portfolio.PNG'); background-size: cover;
+                    <div class="card_image" style="background:url('photos/jtlogo03.png'); background-size: cover;
                     background-repeat: no-repeat; background-position:center;"></div>
                     <div class="card_content">
                       <div class="card_title certi_title"> <h1>PORTFOLIO WEBSITE</h1> I builded this whole website that you are experiencing right now from the scratch. It took months and months of hard work solving problems, taking suggestions, managing time with my academics, meanwhile also helping others to build their portfolio websites and giving suggestions.</div>
