--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
             <h2 class="certificatetitle"> CERTIFICATES
             </h2>
             <section class="cards">
-              <div class="card certi_card">
+              <div class="card certi_card" data-aos="zoom-in"
+              data-aos-offset="300"
+              data-aos-easing="ease-in-sine">
                 <div class="card_image" style="background:url('photos/certificate.PNG'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
@@ -136,7 +138,9 @@
                   <a href="https://www.coursera.org/account/accomplishments/certificate/979DUQUUEV22" target="_blank" class="link certi_link"><div class="ltext">-University of michigan-</div></a>
                 </div>
               </div>
-              <div class="card certi_card">
+              <div class="card certi_card" data-aos="zoom-in"
+              data-aos-offset="300"
+              data-aos-easing="ease-in-sine">
                 <div class="card_image" style="background:url('photos/certificate.PNG'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
@@ -144,7 +148,9 @@
                   <a href="https://www.coursera.org/account/accomplishments/certificate/YG88TD6W2W39" target="_blank" class="link certi_link"><div class="ltext">-University of michigan-</div></a>
                 </div>
               </div>
-              <div class="card certi_card">
+              <div class="card certi_card" data-aos="zoom-in"
+              data-aos-offset="300"
+              data-aos-easing="ease-in-sine">
                 <div class="card_image" style="background:url('photos/certificate.PNG'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
@@ -153,7 +159,9 @@
                 </div>
               </div>
               
-              <div class="card certi_card">
+              <div class="card certi_card" data-aos="zoom-in"
+              data-aos-offset="300"
+              data-aos-easing="ease-in-sine">
                 <div class="card_image" style="background:url('photos/certificate.PNG'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
@@ -161,7 +169,9 @@
                   <a href="https://drive.google.com/file/d/1z0Rl_UYHM1ichY-IGSWhvuGf1qZaFV4k/view?usp=sharing" target="_blank" class="link certi_link"><div class="ltext">-Bulls And Bears-</div></a>
                 </div>
               </div>
-              <div class="card certi_card">
+              <div class="card certi_card" data-aos="zoom-in"
+              data-aos-offset="300"
+              data-aos-easing="ease-in-sine">
                 <div class="card_image" style="background:url('photos/certificate.PNG'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
@@ -169,7 +179,9 @@
                   <a href="https://drive.google.com/file/d/1HTvnQwtkk_LSVUuvi0z2XsdSANKH8Xlm/view?usp=sharing" target="_blank" class="link certi_link"><div class="ltext">-MyCaptain-</div></a>
                 </div>
               </div>
-              <div class="card certi_card">
+              <div class="card certi_card" data-aos="zoom-in"
+              data-aos-offset="300"
+              data-aos-easing="ease-in-sine">
                 <div class="card_image" style="background:url('photos/certificate.PNG'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
@@ -177,7 +189,9 @@
                   <a href="https://www.coursera.org/account/accomplishments/verify/T6659XG579SB?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course" target="_blank" class="link certi_link"><div class="ltext">-Udemy-</div></a>
                 </div>
               </div>
-              <div class="card certi_card">
+              <div class="card certi_card" data-aos="zoom-in"
+              data-aos-offset="300"
+              data-aos-easing="ease-in-sine">
                 <div class="card_image" style="background:url('photos/certificate.PNG'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
@@ -197,7 +211,9 @@
             <div class="certificate" id="certificate">
                 <h2 class="certificatetitle" id="PROject">PROJECTS</h2>
                 <section class="cards">
-                  <div class="card certi_card">
+                  <div class="card certi_card" data-aos="zoom-in"
+                  data-aos-offset="300"
+                  data-aos-easing="ease-in-sine">
                     <div class="card_image" style="background:url('photos/Capture.PNG'); background-size: cover;
                     background-repeat: no-repeat; background-position:center;"></div>
                     <div class="card_content">
@@ -206,7 +222,9 @@
                       <a href="https://link.springer.com/article/10.1007/s11356-021-14017-y" target="_blank" class="link certi_link"><div class="ltext">-Springer-</div></a>
                     </div>
                   </div>
-                  <div class="card certi_card">
+                  <div class="card certi_card" data-aos="zoom-in"
+                  data-aos-offset="300"
+                  data-aos-easing="ease-in-sine">
                     <div class="card_image" style="background:url('photos/Write.PNG'); background-size: cover;
                     background-repeat: no-repeat; background-position:center;"></div>
                     <div class="card_content">
@@ -214,7 +232,9 @@
                       <a href="https://get-rid-of-bullshit.blogspot.com" target="_blank" class="link certi_link"><div class="ltext">-Read here-</div></a>
                     </div>
                   </div>
-                  <div class="card certi_card">
+                  <div class="card certi_card" data-aos="zoom-in"
+                  data-aos-offset="300"
+                  data-aos-easing="ease-in-sine">
                     <div class="card_image" style="background:url('photos/Dev3.PNG'); background-size: cover;
                     background-repeat: no-repeat; background-position:center;"></div>
                     <div class="card_content">
@@ -223,7 +243,9 @@
                     </div>
                   </div>
                   
-                  <div class="card certi_card">
+                  <div class="card certi_card" data-aos="zoom-in"
+                  data-aos-offset="300"
+                  data-aos-easing="ease-in-sine">
                     <div class="card_image" style="background:url('photos/jtlogo03.png'); background-size: cover;
                     background-repeat: no-repeat; background-position:center;"></div>
                     <div class="card_content">
