--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 
         <div class="blue">
         <div class="certificate" id="certificate">
-            <h2 class="certificatetitle"> CERTIFICATES
-            </h2>
+            <div class="certificatetitle"> CERTIFICATES
+            </div>
             <section class="cards">
               <div class="card certi_card" data-aos="zoom-in"
               data-aos-offset="300"
@@ -209,7 +209,7 @@
 
           <div class="blue">
             <div class="certificate" id="certificate">
-                <h2 class="certificatetitle" id="PROject">PROJECTS</h2>
+                <div class="certificatetitle" id="PROject">PROJECTS</div>
                 <section class="cards">
                   <div class="card certi_card" data-aos="zoom-in"
                   data-aos-offset="300"
