--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <meta name="msapplication-TileColor" content="#da532c" >
     <meta name="theme-color" content="#ffffff"> 
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 
 
 
