--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <nav>
           <ul>
-            <li> <a href=""> HOME</a></li>
+            <li> <a href="#"> HOME</a></li>
             <li> <a href="https://get-rid-of-bullshit.blogspot.com"> BLOG</a></li>
             <li> <a href="#certificate"> CERTIFICATION</a></li>
             <li> <a href="#PROject"> PROJECTS</a></li>
