--- a/index.html
+++ b/index.html
@@ -198,6 +198,16 @@
                   <a href="https://drive.google.com/file/d/1Jcf6Aw3mTmTK87tF0lmhE7Pb8cECXik5/view?usp=sharing" target="_blank" class="link certi_link"><div class="ltext">-IIT Roorke-</div></a>
                 </div>
               </div>
+              <div class="card certi_card" data-aos="zoom-in"
+              data-aos-offset="300"
+              data-aos-easing="ease-in-sine">
+                <div class="card_image" style="background:url('Photos/certificate.PNG'); background-size: cover;
+                background-repeat: no-repeat; background-position:center;"></div>
+                <div class="card_content">
+                  <div class="card_title certi_title">HUMANOID WALKING ROBOT </div>
+                  <a href="https://drive.google.com/file/d/1-IWX7Tq0KiXQlQRKYCfNDEo8jrXOqQ4i/view?usp=sharing" target="_blank" class="link certi_link"><div class="ltext">-Cognizance IIT-Roorkee-</div></a>
+                </div>
+              </div>
 
 
             </section>
@@ -250,6 +260,17 @@
                     <div class="card_content">
                       <div class="card_title certi_title"> <h1>PORTFOLIO WEBSITE</h1> I builded this whole website that you are experiencing right now from the scratch. It took months and months of hard work solving problems, taking suggestions, managing time with my academics, meanwhile also helping others to build their portfolio websites and giving suggestions.</div>
                       <a href="" target="_blank" class="link certi_link"><div class="ltext">Click Here</div></a>
+                    </div>
+                  </div>
+
+                  <div class="card certi_card" data-aos="zoom-in"
+                  data-aos-offset="300"
+                  data-aos-easing="ease-in-sine">
+                    <div class="card_image" style="background:url('Photos/cognizance.PNG'); background-size: cover;
+                    background-repeat: no-repeat; background-position:center;"></div>
+                    <div class="card_content">
+                      <div class="card_title certi_title"><h1>WINNER OF HUMANOID WALKING ROBOT</h1> I was the winner of the Humanoid walking robot making workshop held by EDU X LABS and Cognizance IIT-Roorkee with my team members.</div>
+                      <a href="https://drive.google.com/file/d/1BPfHc0VDR_WcOqiPybkIS75Qu8wp9mEI/view?usp=sharing" target="_blank" class="link certi_link"><div class="ltext">Cognizance IIT-Roorkee</div></a>
                     </div>
                   </div>
 
