--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               <div class="card certi_card" data-aos="zoom-in"
               data-aos-offset="300"
               data-aos-easing="ease-in-sine">
-                <div class="card_image" style="background:url('Photos/certificate.PNG'); background-size: cover;
+                <div class="card_image" style="background:url('photos/certificate.PNG'); background-size: cover;
                 background-repeat: no-repeat; background-position:center;"></div>
                 <div class="card_content">
                   <div class="card_title certi_title">HUMANOID WALKING ROBOT </div>
@@ -266,7 +266,7 @@
                   <div class="card certi_card" data-aos="zoom-in"
                   data-aos-offset="300"
                   data-aos-easing="ease-in-sine">
-                    <div class="card_image" style="background:url('Photos/cognizance.PNG'); background-size: cover;
+                    <div class="card_image" style="background:url('photos/cognizance.PNG'); background-size: cover;
                     background-repeat: no-repeat; background-position:center;"></div>
                     <div class="card_content">
                       <div class="card_title certi_title"><h1>WINNER OF HUMANOID WALKING ROBOT</h1> I was the winner of the Humanoid walking robot making workshop held by EDU X LABS and Cognizance IIT-Roorkee with my team members.</div>
